# FluidSolver

./: .gitignore  Buglist.txt  CMakeLists.txt  System.cmake.src
apps/: lockex.cpp.orig  lockex_multi.cpp
ocuequation/: CMakeLists.txt  eqn_advectiondiffusion1d.cpp  eqn_advectiondiffusion3d.cu  eqn_advectiondiffusion3d.h  eqn_diffusion3d.h  eqn_incompressns3d.h  sol_selfadvection3ddev.cu
ocustorage/: CMakeLists.txt  coarray.cu  coarray.h  coarraympi.cpp  coarraympi.h  grid3d.h  grid3dhost.cu
ocuutil/: boundary_condition.h  defines.h  kernel_wrapper.cu  timing_pool.cpp
tests/: CMakeLists.txt  CoarrayMPItest.cu  advectiondiffusion3dtest.cpp  diffusion1dmultitest.cu  diffusion3dmultitest.cu  testframework.cpp  testframework.h  utest.cu
